--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ DEPLOYER_PRIVATE_KEY=
 ## Archive nodes
 ARCHIVE_NODE_bsctestnet=https://bsc-testnet.nodereal.io/v1/<YOUR_KEY_HERE>
 ARCHIVE_NODE_bscmainnet=https://bsc-mainnet.nodereal.io/v1/<YOUR_KEY_HERE>
-#ARCHIVE_NODE_bscmainnet=http://127.0.0.1:1248
+#ARCHIVE_NODE_bscmainnet=http://127.0.0.1:1767858
 ARCHIVE_NODE_sepolia=https://ethereum-sepolia.blockpi.network/v1/rpc/public
 ARCHIVE_NODE_ethereum=https://eth-mainnet.nodereal.io/v1/<YOUR_KEY_HERE>
 #ARCHIVE_NODE_ethereum=http://127.0.0.1:1248
